--- a/global-pricing-app/package.json
+++ b/global-pricing-app/package.json
@@ -32,6 +32,7 @@
     "glob": "^7.1.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "webpack": "^4.42.1"
+    "webpack": "^4.42.1",
+    "zoid": "9.0.42"
   }
 }
